--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <header class="header page__section">
         <img
           class="header_logo"
-          src="./images/around the us.png"
+          src="./images/around-the-us.png"
           alt="around the us logo"
         />
       </header>
