--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="page__content">
       <header class="header page__section">
         <img
-          class="header_logo"
+          class="header__image"
           src="./images/around-the-us.png"
           alt="around the us logo"
         />
@@ -34,8 +34,8 @@
         </section>
 
         <section class="cards page__section">
-          <ul class="card__list">
-            <li class="card">
+          <ul class="cards__list">
+            <li class="cards__list_card">
               <img
                 class="card__img"
                 src="./images/yosemite.jpg"
@@ -46,7 +46,7 @@
                 <button class="card__button" type="button"></button>
               </div>
             </li>
-            <li class="card">
+            <li class="cards__list_card">
               <img
                 class="card__img"
                 src="./images/lake-louise.jpg"
@@ -57,7 +57,7 @@
                 <button class="card__button" type="button"></button>
               </div>
             </li>
-            <li class="card">
+            <li class="cards__list_card">
               <img
                 class="card__img"
                 src="./images/bald-mountains.jpg"
@@ -68,7 +68,7 @@
                 <button class="card__button" type="button"></button>
               </div>
             </li>
-            <li class="card">
+            <li class="cards__list_card">
               <img
                 class="card__img"
                 src="./images/latemar.jpg"
@@ -79,7 +79,7 @@
                 <button class="card__button" type="button"></button>
               </div>
             </li>
-            <li class="card">
+            <li class="cards__list_card">
               <img
                 class="card__img"
                 src="./images/vanoise.jpg"
@@ -90,7 +90,7 @@
                 <button class="card__button" type="button"></button>
               </div>
             </li>
-            <li class="card">
+            <li class="cards__list_card">
               <img
                 class="card__img"
                 src="./images/lago.jpg"
