--- a/index.html
+++ b/index.html
@@ -37,68 +37,68 @@
           <ul class="cards__list">
             <li class="cards__card">
               <img
-                class="card__img"
+                class="cards__card_image"
                 src="./images/yosemite.jpg"
                 alt="yosemite pic"
               />
-              <div class="card__name">
-                <h2 class="card__title">Yosemite Valley</h2>
-                <button class="card__button" type="button"></button>
+              <div class="cards__card_description">
+                <h2 class="cards__card_title">Yosemite Valley</h2>
+                <button class="cards__card_button" type="button"></button>
               </div>
             </li>
             <li class="cards__card">
               <img
-                class="card__img"
+                class="cards__card_image"
                 src="./images/lake-louise.jpg"
                 alt="lake louise pic"
               />
-              <div class="card__name">
-                <h2 class="card__title">Lake Louise</h2>
-                <button class="card__button" type="button"></button>
+              <div class="cards__card_description">
+                <h2 class="cards__card_title">Lake Louise</h2>
+                <button class="cards__card_button" type="button"></button>
               </div>
             </li>
             <li class="cards__card">
               <img
-                class="card__img"
+                class="cards__card_image"
                 src="./images/bald-mountains.jpg"
                 alt="bald mountains pic"
               />
-              <div class="card__name">
-                <h2 class="card__title">Bald Mountains</h2>
-                <button class="card__button" type="button"></button>
+              <div class="cards__card_description">
+                <h2 class="cards__card_title">Bald Mountains</h2>
+                <button class="cards__card_button" type="button"></button>
               </div>
             </li>
             <li class="cards__card">
               <img
-                class="card__img"
+                class="cards__card_image"
                 src="./images/latemar.jpg"
                 alt="latemar pic"
               />
-              <div class="card__name">
-                <h2 class="card__title">Latemar</h2>
-                <button class="card__button" type="button"></button>
+              <div class="cards__card_description">
+                <h2 class="cards__card_title">Latemar</h2>
+                <button class="cards__card_button" type="button"></button>
               </div>
             </li>
             <li class="cards__card">
               <img
-                class="card__img"
+                class="cards__card_image"
                 src="./images/vanoise.jpg"
                 alt="vanoise pic"
               />
-              <div class="card__name">
-                <h2 class="card__title">Vanoise National Park</h2>
-                <button class="card__button" type="button"></button>
+              <div class="cards__card_description">
+                <h2 class="cards__card_title">Vanoise National Park</h2>
+                <button class="cards__card_button" type="button"></button>
               </div>
             </li>
             <li class="cards__card">
               <img
-                class="card__img"
+                class="cards__card_image"
                 src="./images/lago.jpg"
                 alt="lago di braies pic"
               />
-              <div class="card__name">
-                <h2 class="card__title">Lago di Braies</h2>
-                <button class="card__button" type="button"></button>
+              <div class="cards__card_description">
+                <h2 class="cards__card_title">Lago di Braies</h2>
+                <button class="cards__card_button" type="button"></button>
               </div>
             </li>
           </ul>
