--- a/index.html
+++ b/index.html
@@ -35,70 +35,70 @@
 
         <section class="cards page__section">
           <ul class="cards__list">
-            <li class="cards__card">
+            <li class="cards__list-item">
               <img
-                class="cards__card_image"
+                class="card__image"
                 src="./images/yosemite.jpg"
                 alt="yosemite pic"
               />
-              <div class="cards__card_description">
-                <h2 class="cards__card_title">Yosemite Valley</h2>
-                <button class="cards__card_button" type="button"></button>
+              <div class="card__description">
+                <h2 class="card__title">Yosemite Valley</h2>
+                <button class="card__button" type="button"></button>
               </div>
             </li>
-            <li class="cards__card">
+            <li class="cards__list-item">
               <img
-                class="cards__card_image"
+                class="card__image"
                 src="./images/lake-louise.jpg"
                 alt="lake louise pic"
               />
-              <div class="cards__card_description">
-                <h2 class="cards__card_title">Lake Louise</h2>
-                <button class="cards__card_button" type="button"></button>
+              <div class="card__description">
+                <h2 class="card__title">Lake Louise</h2>
+                <button class="card__button" type="button"></button>
               </div>
             </li>
-            <li class="cards__card">
+            <li class="cards__list-item">
               <img
-                class="cards__card_image"
+                class="card__image"
                 src="./images/bald-mountains.jpg"
                 alt="bald mountains pic"
               />
-              <div class="cards__card_description">
-                <h2 class="cards__card_title">Bald Mountains</h2>
-                <button class="cards__card_button" type="button"></button>
+              <div class="card__description">
+                <h2 class="card__title">Bald Mountains</h2>
+                <button class="card__button" type="button"></button>
               </div>
             </li>
-            <li class="cards__card">
+            <li class="cards__list-item">
               <img
-                class="cards__card_image"
+                class="card__image"
                 src="./images/latemar.jpg"
                 alt="latemar pic"
               />
-              <div class="cards__card_description">
-                <h2 class="cards__card_title">Latemar</h2>
-                <button class="cards__card_button" type="button"></button>
+              <div class="card__description">
+                <h2 class="card__title">Latemar</h2>
+                <button class="card__button" type="button"></button>
               </div>
             </li>
-            <li class="cards__card">
+            <li class="cards__list-item">
               <img
-                class="cards__card_image"
+                class="card__image"
                 src="./images/vanoise.jpg"
                 alt="vanoise pic"
               />
-              <div class="cards__card_description">
-                <h2 class="cards__card_title">Vanoise National Park</h2>
-                <button class="cards__card_button" type="button"></button>
+              <div class="card__description">
+                <h2 class="card__title">Vanoise National Park</h2>
+                <button class="card__button" type="button"></button>
               </div>
             </li>
-            <li class="cards__card">
+            <li class="cards__list-item">
               <img
-                class="cards__card_image"
+                class="card__image"
                 src="./images/lago.jpg"
                 alt="lago di braies pic"
               />
-              <div class="cards__card_description">
-                <h2 class="cards__card_title">Lago di Braies</h2>
-                <button class="cards__card_button" type="button"></button>
+              <div class="card__description">
+                <h2 class="card__title">Lago di Braies</h2>
+                <button class="card__button" type="button"></button>
               </div>
             </li>
           </ul>
