--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         <section class="cards page__section">
           <ul class="cards__list">
-            <li class="cards__list-item">
+            <li class="card">
               <img
                 class="card__image"
                 src="./images/yosemite.jpg"
@@ -46,7 +46,7 @@
                 <button class="card__button" type="button"></button>
               </div>
             </li>
-            <li class="cards__list-item">
+            <li class="card">
               <img
                 class="card__image"
                 src="./images/lake-louise.jpg"
@@ -57,7 +57,7 @@
                 <button class="card__button" type="button"></button>
               </div>
             </li>
-            <li class="cards__list-item">
+            <li class="card">
               <img
                 class="card__image"
                 src="./images/bald-mountains.jpg"
@@ -68,7 +68,7 @@
                 <button class="card__button" type="button"></button>
               </div>
             </li>
-            <li class="cards__list-item">
+            <li class="card">
               <img
                 class="card__image"
                 src="./images/latemar.jpg"
@@ -79,7 +79,7 @@
                 <button class="card__button" type="button"></button>
               </div>
             </li>
-            <li class="cards__list-item">
+            <li class="card">
               <img
                 class="card__image"
                 src="./images/vanoise.jpg"
@@ -90,7 +90,7 @@
                 <button class="card__button" type="button"></button>
               </div>
             </li>
-            <li class="cards__list-item">
+            <li class="card">
               <img
                 class="card__image"
                 src="./images/lago.jpg"
