--- a/index.html
+++ b/index.html
@@ -7,14 +7,13 @@
     <title>Sprint 3: Around the U.S.</title>
     <link rel="shortcut icon" href="favicon.ico" />
     <link rel="stylesheet" href="./pages/index.css" />
-    <link rel="stylesheet" href="./vendor/normalize.css" />
   </head>
   <body class="page">
     <div class="page__content">
       <header class="header page__section">
         <img
           class="header__image"
-          src="./images/around-the-us.png"
+          src="./images/logo.svg"
           alt="around the us logo"
         />
       </header>
@@ -27,7 +26,11 @@
           />
           <div class="profile__info">
             <h1 class="profile__title">Jacques Cousteau</h1>
-            <button class="profile__pencil-button" type="button"></button>
+            <button
+              aria-label="edit button"
+              class="profile__pencil-button"
+              type="button"
+            ></button>
             <p class="profile__description">Explorer</p>
           </div>
           <button class="profile__add-button" type="button"></button>
