--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sprint 3: Around the U.S.</title>
+    <title>Around the U.S.</title>
     <link rel="shortcut icon" href="favicon.ico" />
     <link rel="stylesheet" href="./pages/index.css" />
   </head>
@@ -111,6 +111,27 @@
         <p class="footer__copyright">&copy; 2023 Around The U.S.</p>
       </footer>
     </div>
+
+    <section class="modal modal__opened">
+      <div class="modal__container">
+        <button class="modal__close_button"></button>
+        <h2 class="modal__heading">Edit Profile</h2>
+        <form class="modal__form">
+          <input
+            type="text"
+            class="modal__title"
+            placeholder="Jacques Cousteau"
+          />
+          <input
+            type="text"
+            class="modal__description"
+            placeholder="Explorer"
+          />
+          <button class="modal__save_button">Save</button>
+        </form>
+      </div>
+    </section>
+
     <script src="./scripts/index.js"></script>
   </body>
 </html>
