--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
     <section class="modal modal__opened">
       <div class="modal__container">
-        <button class="modal__close_button"></button>
+        <button class="modal__close-button"></button>
         <h2 class="modal__heading">Edit Profile</h2>
         <form class="modal__form">
           <input
@@ -127,7 +127,7 @@
             class="modal__description"
             placeholder="Explorer"
           />
-          <button class="modal__save_button">Save</button>
+          <button class="modal__save-button">Save</button>
         </form>
       </div>
     </section>
