--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       </footer>
     </div>
 
-    <section class="modal modal__opened">
+    <section class="modal modal_opened">
       <div class="modal__container">
         <button class="modal__close-button"></button>
         <h2 class="modal__heading">Edit Profile</h2>
