--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
               aria-label="edit button"
               class="profile__pencil-button"
               type="button"
+              id="profile-edit-button"
             ></button>
             <p class="profile__description">Explorer</p>
           </div>
@@ -112,9 +113,9 @@
       </footer>
     </div>
 
-    <section class="modal modal_opened">
+    <section class="modal modal_opened" id="profile-edit-modal">
       <div class="modal__container">
-        <button class="modal__close-button"></button>
+        <button class="modal__close-button" id="modal-close-button"></button>
         <h2 class="modal__heading">Edit Profile</h2>
         <form class="modal__form">
           <input
