--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <div class="modal__container">
         <button class="modal__close-button" id="modal-close-button"></button>
         <h2 class="modal__heading">Edit Profile</h2>
-        <form class="modal__form" id="modal-form">
+        <form class="modal__form" id="edit-profile-form">
           <input
             type="text"
             class="modal__title"
@@ -80,13 +80,13 @@
         <form class="modal__form" id="add-card-form">
           <input
             type="text"
-            class="modal__title"
+            class="modal__title modal__input_type_title"
             placeholder="Title"
             id="modal-name"
           />
           <input
             type="text"
-            class="modal__description"
+            class="modal__description modal__input_type_url"
             placeholder="Image Link"
             id="modal-image-link"
             name="link"
