fixed BEM naming

--- a/index.html
+++ b/index.html
@@ -81,14 +81,14 @@
         <form class="popup__form" id="add-card-form">
           <input
             type="text"
-            class="popup__title popup__input_type_title"
+            class="popup__title popup__form_type_title"
             placeholder="Title"
             id="popup-title"
             name="title"
           />
           <input
             type="text"
-            class="popup__description popup__input_type_url"
+            class="popup__description popup__form_type_url"
             placeholder="Image Link"
             id="popup-image-link"
             name="link"
