--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
         <form class="popup__form" id="edit-profile-form">
           <input
             type="text"
-            class="popup__title"
+            class="popup__input popup__input_type_name"
             placeholder="Jacques Cousteau"
             id="popup-name"
           />
           <input
             type="text"
-            class="popup__description"
+            class="popup__input popup__input_type_description"
             placeholder="Explorer"
             id="popup-description"
           />
@@ -81,14 +81,14 @@
         <form class="popup__form" id="add-card-form">
           <input
             type="text"
-            class="popup__title popup__form_type_title"
+            class="popup__input popup__input_type_title"
             placeholder="Title"
             id="popup-title"
             name="title"
           />
           <input
             type="text"
-            class="popup__description popup__form_type_url"
+            class="popup__input popup__input_type_url"
             placeholder="Image Link"
             id="popup-image-link"
             name="link"
