save button fixed

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             minlength="2"
             required
           />
-          <span class="popup__input_type_error" id="popup-name-error"></span>
+          <span class="popup__error" id="popup-name-error"></span>
           <input
             type="text"
             class="popup__input popup__input_type_description"
@@ -77,16 +77,8 @@
             minlength="2"
             required
           />
-          <span
-            class="popup__input_type_error"
-            id="popup-description-error"
-          ></span>
-          <button
-            class="popup__save-button popup__button_disabled"
-            type="submit"
-          >
-            Save
-          </button>
+          <span class="popup__error" id="popup-description-error"></span>
+          <button class="popup__save-button" type="submit">Save</button>
         </form>
       </div>
     </section>
@@ -108,10 +100,7 @@
             name="title"
             required
           />
-          <span
-            class="popup__error popup__input_type_error"
-            id="popup-title-error"
-          ></span>
+          <span class="popup__error" id="popup-title-error"></span>
           <input
             type="url"
             class="popup__input popup__input_type_url"
@@ -120,16 +109,8 @@
             name="link"
             required
           />
-          <span
-            class="popup__error popup__input_type_error"
-            id="popup-image-link-error"
-          ></span>
-          <button
-            class="popup__save-button popup__button_disabled"
-            type="submit"
-          >
-            Create
-          </button>
+          <span class="popup__error" id="popup-image-link-error"></span>
+          <button class="popup__save-button" type="submit">Create</button>
         </form>
       </div>
     </section>
