--- a/index.html
+++ b/index.html
@@ -138,7 +138,6 @@
       </li>
     </template>
 
-    <script src="./scripts/validation.js" defer></script>
-    <script src="./scripts/index.js" defer></script>
+    <script src="./pages/index.js" defer type="module"></script>
   </body>
 </html>
