--- a/src/index.html
+++ b/src/index.html
@@ -5,15 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Around the U.S.</title>
-    <link rel="shortcut icon" href="favicon.ico" />
-    <link rel="stylesheet" href="./pages/index.css" />
+    <link rel="shortcut icon" href="../favicon.ico" />
+    <link
+      rel="stylesheet"
+      href="./components/pages/index.css"
+      type="text/css"
+    />
   </head>
   <body class="page">
     <div class="page__content">
       <header class="header page__section">
         <img
           class="header__image"
-          src="./images/logo.svg"
+          src="<%=require('./images/logo.svg')%>"
           alt="around the us logo"
         />
       </header>
@@ -21,7 +25,7 @@
         <section class="profile page__section">
           <img
             class="profile__pic"
-            src="./images/jacques-cousteau.png"
+            src="<%=require('./images/jacques-cousteau.png')%>"
             alt="jacques cousteau profile pic"
           />
           <div class="profile__info">
@@ -138,6 +142,6 @@
       </li>
     </template>
 
-    <script src="./pages/index.js" defer type="module"></script>
+    <!-- <script src="./pages/index.js" defer type="module"></script> -->
   </body>
 </html>
