fixed add card popup

--- a/src/index.html
+++ b/src/index.html
@@ -96,7 +96,7 @@
             class="popup__input popup__input_type_title"
             placeholder="Title"
             id="popup-title"
-            name="title"
+            name="name"
             required
           />
           <span class="popup__error" id="popup-title-error"></span>
