edit profile fixed

--- a/src/index.html
+++ b/src/index.html
@@ -64,6 +64,7 @@
             id="popup-name"
             maxlength="40"
             minlength="2"
+            name="name"
             required
           />
           <span class="popup__error" id="popup-name-error"></span>
@@ -72,6 +73,7 @@
             class="popup__input popup__input_type_description"
             placeholder="About"
             id="popup-description"
+            name="about"
             maxlength="200"
             minlength="2"
             required
