--- a/src/index.html
+++ b/src/index.html
@@ -127,6 +127,21 @@
         <p class="popup__image-caption"></p>
       </div>
     </section>
+
+    <!--   delete card popup  -->
+ <section class="popup" id="delete-card-popup">
+  <div class="popup__container">
+    <button
+    class="popup__close-button"
+    id="delete-card-close-button"
+    type="button"
+    ></button>
+    <h2 class="popup__heading">Are you sure?</h2>
+    <button class="popup__save-button" type="submit">Yes</button>
+        </form>
+  </div>
+</section>
+
     <!-- card template-->
     <template id="card-template">
       <li class="card">
