not able to submit avatar edit pic

--- a/src/index.html
+++ b/src/index.html
@@ -165,7 +165,8 @@
   placeholder="Image Link"
   id="profile-pic-link"
   name="link"
-  required>
+  required
+  />
   <button class="popup__save-button" type="submit">Yes</button>
 </form>
 </div>
