--- a/src/index.html
+++ b/src/index.html
@@ -24,11 +24,11 @@
               src="<%=require('./images/jacques-cousteau.png')%>"
               alt="jacques cousteau profile pic"
             />
-            <button 
-            class="profile__pic-edit-button"
-            aria-label="profile edit button"
-            type="button"
-            id="profile-pic-edit-button"
+            <button
+              class="profile__pic-edit-button"
+              aria-label="profile edit button"
+              type="button"
+              id="profile-pic-edit-button"
             ></button>
           </div>
           <div class="profile__info">
@@ -137,42 +137,41 @@
     </section>
 
     <!--   delete card popup  -->
- <section class="popup" id="delete-card-popup">
-  <div class="popup__container">
-    <button
-    class="popup__close-button"
-    id="delete-card-close-button"
-    type="button"
-    ></button>
-    <h2 class="popup__heading">Are you sure?</h2>
-    <button class="popup__save-button" type="submit">Yes</button>
+    <section class="popup" id="delete-card-popup">
+      <div class="popup__container">
+        <button
+          class="popup__close-button"
+          id="delete-card-close-button"
+          type="button"
+        ></button>
+        <h2 class="popup__heading">Are you sure?</h2>
+        <form class="popup__form">
+          <button class="popup__save-button" type="submit">Yes</button>
         </form>
-  </div>
-</section>
-<!-- edit profile pic popup -->
-<section class="popup" id="edit-profile-pic-popup">
-<div class="popup__container">
-  <button
+      </div>
+    </section>
+    <!-- edit profile pic popup -->
+    <section class="popup" id="edit-profile-pic-popup">
+      <div class="popup__container">
+        <button
           class="popup__close-button"
           id="viewimage-close-button"
           type="button"
         ></button>
-<h2 class="popup__heading">Change Profile Picture</h2>
-<form class="popup__form" id="edit-profile-pic-form" novalidate>
-  <input 
-  type="url"
-  class="popup__input popup__input_type_url"
-  placeholder="Image Link"
-  id="profile-pic-link"
-  name="link"
-  required
-  />
-  <button class="popup__save-button" type="submit">Yes</button>
-</form>
-</div>
-
-
-</section>
+        <h2 class="popup__heading">Change Profile Picture</h2>
+        <form class="popup__form" id="edit-profile-pic-form" novalidate>
+          <input
+            type="url"
+            class="popup__input popup__input_type_url"
+            placeholder="Image Link"
+            id="profile-pic-link"
+            name="link"
+            required
+          />
+          <button class="popup__save-button" type="submit">Yes</button>
+        </form>
+      </div>
+    </section>
     <!-- card template-->
     <template id="card-template">
       <li class="card">
