validation error fixed

--- a/src/index.html
+++ b/src/index.html
@@ -168,6 +168,7 @@
             name="link"
             required
           />
+          <span class="popup__error" id="profile-pic-link-error"></span>
           <button class="popup__save-button" type="submit">Yes</button>
         </form>
       </div>
